data/Java/10-missing-array-index/6/[M]Error.txt
*http://www.runoob.com/java/java-array.html
Program.java:14: error: incompatible types: double cannot be converted to double[]
            myList = add;
                     ^